# TinyCV

./: CMakeLists.txt  README.md  faceDetect.cpp  faceDetect.h  filters.cpp  filters.h  imgDisplay.cpp  vidDisplay.cpp
